2006-08-31  Matthew Barnes  <mbarnes@redhat.com>

	* em-folder-view.c: (emfv_setup_view_instance)
	Abort if ETable specification file fails to load.

2007-06-22  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #307410

	* em-utils.[ch]: (em_utils_clear_get_password_canceled_accounts_flag):
	Added new function to clear previously set flag to default value.
	* mail-session.c: (get_password): Storing and using new flag within
	account's service structure.
	* mail-component.c: (impl_sendAndReceive):
	Always clear flag to default when user clicks UI component.

2007-07-09  Srinivasa Ragavan  <sragavan@novell.com>

	** Fix for bug #271864 from Hiroyuki Ikezoe

	* mail-component.c: (view_changed):

2007-07-09  Srinivasa Ragavan  <sragavan@novell.com>
	
	** Fix for bug #347782 from hggdh

	* em-format.c: (emf_multipart_encrypted),
	(emf_inlinepgp_encrypted):

2007-07-08  Johnny Jacob  <jjohnny@novell.com>

	* em-composer-utils.c : Added composer.presendcheck event. Fixes
	#334118.
	
2007-07-07  Srinivasa Ragavan  <sragavan@novell.com>

	** Fix for bug #317281 from Michael P. Lepore 

	* filtertypes.xml: Add support to search/filter/vfolders on flag
	completion status
	* searchtypes.xml:
	* vfoldertypes.xml:

2007-07-07  Srinivasa Ragavan  <sragavan@novell.com>

	** Fix for bug #312370 from B S Srinidhi

	* em-format-html.c: (emfh_gethttp):

2007-07-06  Matthew Barnes  <mbarnes@redhat.com>

	* em-format-html-print.c:
	Use new gtk_html_print_operation_run() function in GtkHTML.

2007-07-04  Srinivasa Ragavan  <sragavan@novell.com>
	
	** Added the hook for plugging into Send/Receive dialog for the
	Evolution RSS plugin.

	* em-event.c: (em_event_target_new_send_receive):
	* em-event.h:
	* mail-send-recv.c: (build_dialog), (mail_send_receive):

2007-07-03  simon.zheng  <simon.zheng@sun.com>

	** Fix for bug #453294

	* em-utils.c: (em_utils_save_parts): Convert filename encoding 
	from UTF-8 to current locale before saving attachement.
