@@ -1283,6 +1283,14 @@ em_utils_send_receipt (CamelFolder *folder, CamelMimeMessage *message)
 	camel_object_unref (addr);
 
 	camel_medium_set_header (CAMEL_MEDIUM (receipt), "Return-Path", "<>");
+	if(account) {
+		camel_medium_set_header (CAMEL_MEDIUM (receipt), 
+					"X-Evolution-Account", account->uid);
+		camel_medium_set_header (CAMEL_MEDIUM (receipt), 
+					"X-Evolution-Transport", account->transport->url);
+		camel_medium_set_header (CAMEL_MEDIUM (receipt), 
+					"X-Evolution-Fcc",  account->sent_folder_uri);
+	}
 
 	/* Send the receipt */
 	out_folder = mail_component_get_folder(NULL, MAIL_COMPONENT_FOLDER_OUTBOX);
